--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "stripe": "^8.209.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
